--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,10 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "async-mqtt": "^1.0.1",
     "firebase-admin": "~5.8.1",
-    "firebase-functions": "^0.8.1"
+    "firebase-functions": "^0.8.1",
+    "mqtt": "^2.17.0"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
